--- a/todo.txt
+++ b/todo.txt
@@ -1,8 +1,4 @@
 TODO: 
 
-1. Create Spinner component
-2. Adaptive auth page + maybe add dark mode
-3. Replace all h1,p,h2.. to Typography
-4. Delete unused hooks 
-5. Add some margin (burger menu)
-6. Add Logo and icons for change photo
+1. Delete unused hooks 
+2. Add icons for change photo
